--- a/week 2/opdracht 1/css/styles.css
+++ b/week 2/opdracht 1/css/styles.css
@@ -154,7 +154,7 @@ img[data-avatar] {
     margin-left: .5em;
 }
 
-.members-container {
+.members-container img[data-avatar]{
     height: 100%;
 }
 
@@ -307,7 +307,8 @@ ul.domains li:first-child::before {
 .signleUser {
     background-color: rgba(255, 255, 255, 1);
     position: relative;
-    transition: 500ms all ease-in;
+    transition: 200ms all ease-in;
+    /*transition: 500ms all ease-in;*/
     transform: scale(1);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
     padding-bottom: .5em;
@@ -334,6 +335,16 @@ ul.domains li:first-child::before {
     background-image: none;
     color: #fff;
     opacity: 1;
+}
+
+.request_denied {
+    background-color: rgb(255, 210, 0);
+    background-image: none;
+    color: #333;
+    opacity: 1;
+}
+.request_denied h2{
+    color: #333;
 }
 
 .hacked h1,
